# fullstack_rust_docker

./: Dockerfile  README.md  docker-compose.yml  docker-compose_db.yml
backend/: .env  Cargo.toml
backend/configuration/: base.yaml  production.yaml
backend/scripts/: init_db.sh
backend/src/: lib.rs  main.rs  startup.rs  telemetry.rs
backend/src/routes/: hello.rs
frontend/: package-lock.json
frontend/src/: App.vue
