[package]
name = "htmx"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "htmx"

[dependencies]
config = "0.13"
actix-files = "0.6.5"
actix-web = "4.5.1"
tokio = {version = "1.36.0", features = ["full"]}
rust-embed="8.3.0"
mime_guess = "2.0.4"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"]}
serde-aux = "4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
once_cell = "1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"


[profile.release]
codegen-units = 1
lto = "fat"
